<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf_downloader"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:paddingVertical="20dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_txt_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif"
        android:hint="@string/url_hint"
        android:inputType="textUri"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_pdf"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_txt_url"
        app:layout_constraintStart_toStartOf="@id/edt_txt_url"
        app:layout_constraintEnd_toEndOf="@id/edt_txt_url"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@id/btn_download"
        app:layout_constraintStart_toStartOf="@id/btn_download"
        app:layout_constraintEnd_toEndOf="@id/btn_download"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btn_default_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_dummy_pdf"
        android:textSize="15sp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>